tests/ui/option_ref.stderr
error: unsupported reference type
 --> tests/ui/option_ref.rs:4:18
  |
4 |         fn f(_o: &Option<&u8>);
  |                  ^^^^^^^^^^^^
